@@ -44,7 +44,7 @@ use strict;
 use warnings;
 use OpenGL;
 
-our $VERSION = '0.03';
+our $VERSION = '0.04';
 
 =head2 new
 
