@@ -39,7 +39,7 @@ use strict;
 use warnings;
 use OpenGL;
 
-our $VERSION = '0.03';
+our $VERSION = '0.04';
 
 =pod
 
