@@ -7,7 +7,7 @@ use strict;
 use warnings;
 use SDL::Tutorial::3DWorld ();
 
-our $VERSION = '0.03';
+our $VERSION = '0.04';
 
 # Load the game
 my $game = SDL::Tutorial::3DWorld->new;
