@@ -1,6 +1,7 @@
 Changes for Perl extension SDL-Tutorial-3DWorld
 
 0.04 to be released
+	- Adding a texture abstraction library
 	- Adding a simple implementation of a skybox
 
 0.03 Wed 15 Dec 2010
